--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
         <!-- footer -->
         <footer class="footer">
-            <p>&copy; CodeAndCreate.  All right reserved</p>
+            <p>&copy; @ Tees codes inspired by CodeAndCreate.  All right reserved</p>
         </footer>
 
         <!-- end of footer -->
